# onnx-manager

./: .gitignore  README.md  README_cn.md  pyproject.toml
docs/: design.md  design_cn.md  hacker-news-post.md
onnx_manager/: config.py
onnx_manager/cli/: client.py  main.py
onnx_manager/cli/commands/: model.py  pull.py  run.py  serve.py
onnx_manager/daemon/: _run.py  app.py  lifecycle.py
onnx_manager/daemon/routes/: __init__.py  completions.py  embeddings.py  models.py  rerank.py
onnx_manager/inference/: base.py  embedding.py  rerank.py  text_generation.py
onnx_manager/pool/: manager.py  session.py
onnx_manager/store/: downloader.py  registry.py
tests/: conftest.py  test_cli_commands.py  test_convert.py  test_daemon_info.py  test_daemon_routes.py  test_downloader.py  test_inference_embedding.py  test_inference_rerank.py  test_inference_text_generation.py  test_pool_manager.py  test_registry.py  test_session.py
